--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@drawable/logo"
@@ -16,7 +16,6 @@
         <activity android:name="com.example.chameleody.activity.AlbumDetails"
             android:screenOrientation="portrait"/>
         <activity android:name="com.example.chameleody.activity.PlayerActivity"
-            android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait"/>
         <activity android:name="com.example.chameleody.activity.MainActivity"
             android:screenOrientation="portrait">
